--- a/ReadAndAnalysis.Web/Views/Shared/_Layout.cshtml
+++ b/ReadAndAnalysis.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <meta http-equiv="refresh" content="300">
     <title>@ViewBag.Title</title>
     <!-- core:css -->
     <partial name="_AdminCss" />
